---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-10-31
  Features:
    - Added custom procession graphics
  Bugfixes:
    - Any planet start, Fixed setting option not having the arig icon.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-10-31
  Features:
    - Minable cactus will appear in new chunks of the planet generation in old saves
    - Added debug recipe for cactus, now old saves can obtain it through recipe
  Compatibility:
    - Any planet start, barrels are unlocked with steel processing
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-10-23
  Features:
    - Added option to enable arig cargo drops, default is disable.
  Changes:
    - MAJOR CHANGES, separated Arig in hyarion in separate mods to have better order, this makes Arig playable without hyarion. Planetaris unbounded mod will work as a modpack and will enable all planetaris mods. To see earlier changlelog look in Planetaris unbounded
    - Arig crashes now can have construction robots
    - When Hyarion is installed hyper belts will move to the hyarion progression.